...
  var seconds by remember { mutableIntStateOf(0) }
  var sets by remember { mutableIntStateOf(1) }
  var reps by remember { mutableIntStateOf(10) }

  Column(
      modifier =
          Modifier.fillMaxSize().padding(paddingValues).padding(16.dp).testTag("TrainParamScreen"),
      horizontalAlignment = Alignment.CenterHorizontally,
      verticalArrangement = Arrangement.Center) {
        TrainParamHeader(isTimeDependent, minutes, seconds, sets, reps, activity)

        if (isTimeDependent) {
          TimerInputGrid(minutes, seconds, { minutes = it }, { seconds = it })
...
) {
  NumberPicker(
      label = "Number of sets:",
      value = sets,
      range = 0..100,
      onValueChange = onUpdateSets,
      modifier = Modifier.testTag("SetsPicker"))
  NumberPicker(
      label = "Number of reps:",
      value = reps,
      range = 0..100,
      onValueChange = onUpdateReps,
      modifier = Modifier.testTag("RepsPicker"))
}

@Composable
fun ConfirmActionButton(
    navigationActions: NavigationActions,
    activity: String,
...
