...

      // X-axis label
      Text(
          text = xUnitLabel,
          color = axisColor,
          modifier =
              Modifier.align(Alignment.BottomCenter).padding(bottom = 16.dp).testTag("XAxisLabel"))

      // Y-axis label
      Text(
          text = yUnitLabel,
          color = axisColor,
          modifier =
              Modifier.align(Alignment.CenterStart)
                  .padding(start = 16.dp)
                  .rotate(-90f)
                  .testTag("YAxisLabel"))
    }
  }
}

